k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines-vote-ui
  template:
    metadata:
      labels:
        app: pipelines-vote-ui
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/poc-pipelines/pipelines-vote-ui:c98e59da14653e0076ee46e9e72e090124091d8c
          imagePullPolicy: Always
          name: pipelines-vote-ui
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
